[gd_scene load_steps=7 format=2]

[ext_resource path="res://prefabs/Dialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://audio/cinematic/warning_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/map_elements/event_smoke_ascending.gd" type="Script" id=3]
[ext_resource path="res://scripts/dialogs/Dialogue.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.415, 49.8984 )

[sub_resource type="Animation" id=2]
resource_name = "ascending_smoke"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 22.915, 0 ), Vector2( 22.915, 900 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../DialogueContainer/DialogueBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../Niebla:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0745098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../Niebla:Moving")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("../AlarmSound2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[node name="event" type="Area2D"]
pause_mode = 2
position = Vector2( -45.829, 2409.3 )
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -67.2661, -10.1395 )
shape = SubResource( 1 )

[node name="AnimationCamera" type="Camera2D" parent="."]
position = Vector2( 22.915, 484.615 )
scale = Vector2( 0.5, 0.5 )
current = true

[node name="CameraAnimPlayer" type="AnimationPlayer" parent="AnimationCamera"]
anims/ascending_smoke = SubResource( 2 )

[node name="DialogueContainer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="DialogueBox" type="Control" parent="DialogueContainer" instance=ExtResource( 1 )]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogue_file_path = "res://dialogues/smoke_ascending_dialog.json"
play_on_init = false

[node name="AlarmSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="dialogue_finished" from="DialogueContainer/DialogueBox" to="." method="_on_DialogueBox_dialogue_finished"]
[connection signal="event_after_dialogue_begin" from="DialogueContainer/DialogueBox" to="." method="_on_DialogueBox_event_after_dialogue_begin"]
